# okr-gantt

./: README.md  example.py  pyproject.toml
okr/: gantt.py  plot.py  workdays.py
