[project]
name = "okr"
version = "0.1.0"
description = "Lightweight Python tools to build, schedule, and visualize OKR timelines and Gantt charts — with holiday-aware workday estimation and customizable plotting via Matplotlib."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "holidays>=0.76",
    "jupyter>=1.1.1",
    "jupytext>=1.17.2",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
]
